[package]
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A library for calculating the Kelly Formula for wealth management."
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["lib", "kelly-formula", "wealth-formula"]
license = "MIT OR Apache-2.0"
name = "kelly"
repository = "https://github.com/alxolr/kelly"
version = "0.1.0"

[dependecies]
